feat: add cool websockets and update connection with db

--- a/httpd.conf
+++ b/httpd.conf
@@ -24,6 +24,9 @@ DocumentRoot "/home/studs/s409331/is-lab1/frontend/www"
 ProxyPass        /api http://127.0.0.1:20568/person-management/api
 ProxyPassReverse /api http://127.0.0.1:20568/person-management/api
 
+ProxyPass        /ws ws://127.0.0.1:20568/person-management/websocket
+ProxyPassReverse /ws ws://127.0.0.1:20568/person-management/websocket
+
 
 PidFile "/home/studs/s409331/is-lab1/frontend/httpd.pid"
 Mutex file:/home/studs/s409331/is-lab1/frontend default
